compiler/cpuflags/TestAESIntrinsicsOnUnsupportedConfig.java fails on aarch64

XMLWordPrintable

    • b17
    • aarch64
    • linux

        Currently the hotspot jtreg test compiler/cpuflags/TestAESIntrinsicsOnUnsupportedConfig.java fails on aarch64 systems where the CPU does not support AES instructions.
        Reason is that in this test, we check for the following fix message (that is printed on other CPU platforms):

        51 private static final String AES_NOT_AVAILABLE_MSG = "warning: AES "
        52 + "instructions are not available on this CPU";

        However the aarch64 message differs and prints instead :
        warning: UseAES specified, but not supported on this CPU

        Same with the 'warning: AES intrinsics are not available on this CPU' that is checked by the test as well.
        (gives currently on aarch64 the warning: UseAESIntrinsics specified, but not supported on this CPU)

        So I think the aarch64 messages should be adjusted to match those on other architectures.

              Assignee:
              Matthias Baesken
              Reporter:
              Matthias Baesken
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: